# hibernation

./: .gitignore  .oxlintrc.json  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  package-lock.json  package.json  renovate.json
.github/workflows/: auto-merge-flake-updates.yml  auto-merge-release.yml  checks.yml  cli-release.yml  create-release.yml  flake-lock-update.yml  flake.yml  release-trigger.yml  release.yml  test-action.yml
action/: package.json
action/src/: index.ts
backend/: .env.example  Cargo.toml
backend/entity/: Cargo.toml
backend/entity/src/entities/: cache.rs  downstream_cache.rs  mod.rs  nar.rs  nar_info.rs  nar_info_reference.rs  prelude.rs  sea_orm_active_enums.rs  token.rs  user.rs  user_avatar.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20260129_154755_user_avatar.rs  m20260317_135750_token.rs  m20260319_192505_cache.rs  m20260319_193259_nar.rs  m20260319_194332_nar_info.rs  m20260320_164249_cache_access.rs
backend/src/: cli.rs  config.rs  group.rs  host.rs  main.rs  nix.rs  permissions.rs  rate_limit.rs  settings.rs  setup.rs  token.rs  updater.rs  user.rs  utils.rs  version.rs
backend/src/auth/: cli_auth.rs  config.rs  jwt_auth.rs  jwt_state.rs  logout.rs  mod.rs  oidc.rs  password.rs  test_token.rs
backend/src/cache/: cleanup.rs  dedupe.rs  management.rs  mod.rs  push.rs  state.rs  storage.rs
backend/src/db/: cache.rs  group.rs  group_ext.rs  mod.rs  nar.rs  settings.rs  token.rs  user.rs  user_ext.rs
backend/src/mail/: mod.rs  reset.rs  state.rs  test.rs
backend/src/user/: account.rs  info.rs  management.rs  mod.rs  template.rs
backend/src/ws/: mod.rs  state.rs  updater.rs
cli/: Cargo.toml
cli/src/: api.rs  auth.rs  cli.rs  config.rs  main.rs  push.rs
frontend/: openapi-ts.config.ts  package.json  tsconfig.tsbuildinfo
frontend/src/: app.css  app.html
frontend/src/lib/: permissions.svelte.ts
frontend/src/lib/backend/: auth.svelte.ts  cache.svelte.ts  settings.svelte.ts  token.svelte.ts  updater.svelte.ts  util.svelte.ts
frontend/src/lib/client/: client.gen.ts  index.ts  sdk.gen.ts  transformers.gen.ts  types.gen.ts
frontend/src/lib/client/core/: params.gen.ts
frontend/src/lib/components/: nav.svelte.ts
frontend/src/lib/components/code/: code.svelte.ts  shiki.ts  types.ts
frontend/src/lib/components/form/: FormDateInput.svelte
frontend/src/lib/components/navigation/sidebar/: SidebarHeader.svelte  items.svelte.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte
frontend/src/routes/account/auth/: +page.ts  Email.svelte  Password.svelte
frontend/src/routes/auth/cli/: +page.svelte
frontend/src/routes/caches/: +page.svelte  +page.ts
frontend/src/routes/caches/[uuid]/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
frontend/src/routes/caches/[uuid]/search/: +page.svelte  Actions.svelte  TableHead.svelte  table.svelte.ts
frontend/src/routes/caches/[uuid]/settings/: +page.svelte  schema.svelte.ts
frontend/src/routes/caches/create/: +page.svelte  Information.svelte  schema.svelte.ts
frontend/src/routes/groups/: table.svelte.ts
frontend/src/routes/groups/[uuid]/: +page.svelte  +page.ts  Permissions.svelte  schema.svelte.ts
frontend/src/routes/login/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/password/reset/: +page.svelte
frontend/src/routes/settings/general/: +page.svelte
frontend/src/routes/settings/mail/: +page.svelte  schema.svelte.ts
frontend/src/routes/settings/user/: +page.svelte  schema.svelte.ts
frontend/src/routes/setup/: +page.svelte  +page.ts  schema.svelte.ts
frontend/src/routes/tokens/: +page.svelte  +page.ts  table.svelte.ts
frontend/src/routes/tokens/[uuid]/: +page.svelte  +page.ts  schema.svelte.ts
frontend/src/routes/tokens/create/: +page.svelte  Information.svelte  schema.svelte.ts
frontend/src/routes/users/: table.svelte.ts
frontend/src/routes/users/[uuid]/: +page.svelte  +page.ts  schema.svelte.ts
frontend/src/routes/users/create/: +page.svelte
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/api/: push.rs
