[package]
name = "backend"
version = "0.0.1"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
centaurus = { version = "0.0.1", features = [
  "axum",
  "logging",
  "sea-orm",
  "uuid",
  "hmac",
  "argon2",
  "base64",
  "rsa",
  "auth",
  "jsonwebtoken",
  "reqwest",
  "lettre",
  "url",
  "image",
] }
uuid = { version = "0.0.1"] }
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "0.0.1", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
] }
axum = { version = "0.0.1"] }
axum-extra = { version = "0.0.1"] }
tracing = "0.1.44"
tower = "0.5.2"
tower-http = { version = "0.0.1"] }
tokio = { version = "0.0.1"] }
http = "1.4.0"
dotenv = "0.15.0"
serde = { version = "0.0.1"] }
figment = { version = "0.0.1"] }
hyper-util = { version = "0.0.1"] }
futures-util = "0.3.32"
serde_json = "1.0.149"
chrono = "0.4.44"
rand = "0.10.0"
hex = "0.4.3"
reqwest = { version = "0.0.1"] }
reqwest-middleware = { version = "0.0.1", features = [
  "rustls",
  "http2",
  "json",
  "charset",
  "query",
] }
async-trait = "0.1.89"
rsa = "0.9.10"
argon2 = "0.5.3"
jsonwebtoken = { version = "0.0.1"] }
time = "0.3.47"
url = { version = "0.0.1"] }
lettre = { version = "0.0.1", default-features = false, features = [
  "smtp-transport",
  "rustls",
  "builder",
  "rustls-native-certs",
  "ring",
  "tokio1-rustls",
] }
md5 = "0.8.0"
image = { version = "0.0.1", default-features = false, features = [
  "png",
  "jpeg",
  "webp",
] }
base64 = "0.22.1"
tower_governor = { version = "0.0.1", features = [
  "axum",
], default-features = false }
governor = "0.10.4"
dashmap = "6.1.0"

[[bin]]
name = "backend"
path = "src/main.rs"
