[package]
name = "backend"
version = "0.3.2"
edition = "2024"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
aide = { version = "0.16.0-alpha.4", features = [
  "axum",
  "axum-extra",
  "axum-extra-cookie",
  "axum-extra-headers",
  "axum-json",
  "axum-query",
  "axum-tokio",
  "axum-ws",
  "macros"
] }
async-compression = { version = "0.4.42", features = ["tokio", "zstd"] }
aws-config = { version = "1.8.17", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.133.0", features = ["behavior-version-latest"] }
axum = { version = "0.8.9", features = ["macros", "tracing", "ws"] }
axum-extra = { version = "0.12.6", features = ["cookie", "typed-header"] }
centaurus = { version = "0.16.2", features = ["uuid", "storage"] }
chrono = "0.4.44"
dashmap = "6.2.1"
dotenvy = "0.15.7"
entity = { path = "entity" }
figment = { version = "0.10.19", features = ["env"] }
futures-util = "0.3.32"
harmonia-store-core = { git = "https://github.com/nix-community/harmonia", rev = "harmonia-v3.0.0" }
http = "1.4.1"
# Required to enable image formats
image = { version = "0.25.10", default-features = false, features = [
  "jpeg",
  "png",
  "webp"
] }
migration = { path = "migration" }
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13.4", features = ["form", "http3", "json"] }
schemars = { version = "1.2.1", features = ["chrono04", "url2", "uuid1"] }
sea-orm = { version = "1.1.20", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "sqlx-sqlite"
] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
shared = { path = "../shared" }
time = "0.3.47"
tokio = { version = "1.52.3", features = ["signal"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower_governor = { version = "0.8.0", default-features = false, features = [
  "axum"
] }
tracing = "0.1.44"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4", "v7"] }
