[package]
name = "hibernation"
version = "0.2.5"
edition = "2024"
description = "A CLI for the hibernation nix cache"
repository = "https://github.com/Profiidev/hibernation"
license = "GPL-2.0-only"

[dependencies]
async-compression = { version = "0.4.41", features = ["tokio", "zstd"] }
bytes = "1.11.1"
centaurus = { version = "0.11.1", default-features = false, features = [
  "error",
  "logging",
  "reqwest",
  "serde_json",
  "url"
] }
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
futures-core = "0.3.32"
harmonia-protocol = { git = "https://github.com/nix-community/harmonia", rev = "harmonia-v3.0.0" }
harmonia-store-core = { git = "https://github.com/nix-community/harmonia", rev = "harmonia-v3.0.0" }
harmonia-store-remote = { git = "https://github.com/nix-community/harmonia", rev = "harmonia-v3.0.0" }
indicatif = "0.18.4"
opener = "0.8.4"
reqwest = { version = "0.13.2", features = ["form", "http3", "json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
shared = { path = "../shared" }
tokio = { version = "1.51.1", features = [
  "fs",
  "io-std",
  "macros",
  "rt-multi-thread",
] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-indicatif = "=0.3.13"
tracing-subscriber = "=0.3.19"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
