[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
harmonia-store-core = { git = "https://github.com/nix-community/harmonia", rev = "fdf0e22a6577d714c1c7e67d68cbac9fd259be90" }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
tokio = { version = "1.51.0", features = [] }
itoa = "1.0.18"
ed25519-compact = "2.2.0"
base64 = "0.22.1"
schemars = { version = "1.2.1", features = ["uuid1", "chrono04", "url2"] }

[lib]
path = "src/lib.rs"
